hphp/hack/test/decl/missing_function_typehints.php.typecheck.exp
File "missing_function_typehints.php", line 3, characters 12-13:
Was expecting a type hint (Typing[4032])
File "missing_function_typehints.php", line 3, characters 10-10:
Was expecting a return type hint (Typing[4030])
