hphp/hack/test/decl/missing_function_typehints.php
<?hh

function f($x) {
  throw new Exception();
}
